log
Sat 30 Mar 2024 09:19:09 PM UTC: 
 list.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘create_list’:
list.c:34:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   L->size = 0;
      |    ^~
list.c: In function ‘first’:
list.c:41:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   41 |   if(L->size == 0) {
      |       ^~
list.c:45:11: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   45 |   return L->data[L->current];
      |           ^~
list.c: In function ‘nextList’:
list.c:50:6: error: ‘L’ undeclared (first use in this function)
   50 |   if(L->current < L->size - 1) {
      |      ^
list.c:50:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘first’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
07d0866
Sat 30 Mar 2024 09:20:20 PM UTC: 
In file included from test.c:5:
list.c: In function ‘create_list’:
list.c:34:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   L->size = 0;
      |    ^~
list.c: In function ‘first’:
list.c:41:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   41 |   if(L->size == 0) {
      |       ^~
list.c:45:11: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   45 |   return L->data[L->current];
      |           ^~
list.c: In function ‘nextList’:
list.c:50:6: error: ‘L’ undeclared (first use in this function)
   50 |   if(L->current < L->size - 1) {
      |      ^
list.c:50:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘first’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1b221cf
Sat 30 Mar 2024 09:21:34 PM UTC: 
In file included from test.c:5:
list.c: In function ‘create_list’:
list.c:34:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   L->size = 0;
      |    ^~
list.c: In function ‘first’:
list.c:41:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   41 |   if(L->size == 0) {
      |       ^~
list.c:45:11: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   45 |   return L->data[L->current];
      |           ^~
list.c: In function ‘nextList’:
list.c:50:6: error: ‘L’ undeclared (first use in this function)
   50 |   if(L->current < L->size - 1) {
      |      ^
list.c:50:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘first’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1c6689c
Sat 30 Mar 2024 09:21:39 PM UTC: 
In file included from test.c:5:
list.c: In function ‘create_list’:
list.c:34:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   L->size = 0;
      |    ^~
list.c: In function ‘first’:
list.c:41:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   41 |   if(L->size == 0) {
      |       ^~
list.c:45:11: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   45 |   return L->data[L->current];
      |           ^~
list.c: In function ‘nextList’:
list.c:50:6: error: ‘L’ undeclared (first use in this function)
   50 |   if(L->current < L->size - 1) {
      |      ^
list.c:50:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘first’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e1b1329
Sat 30 Mar 2024 09:22:46 PM UTC: 
In file included from test.c:5:
list.c: In function ‘create_list’:
list.c:34:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   L->size = 0;
      |    ^~
list.c: In function ‘first’:
list.c:41:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   41 |   if(L->size == 0) {
      |       ^~
list.c:45:11: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   45 |   return L->data[L->current];
      |           ^~
list.c: In function ‘nextList’:
list.c:50:6: error: ‘L’ undeclared (first use in this function)
   50 |   if(L->current < L->size - 1) {
      |      ^
list.c:50:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘first’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ec1c296
Sat 30 Mar 2024 09:24:54 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘create_list’:
list.c:35:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   35 |   L->size = NULL;
      |    ^~
list.c: In function ‘first’:
list.c:43:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   43 |   if(L->size == 0) {
      |       ^~
list.c:47:11: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   47 |   return L->data[L->current];
      |           ^~
list.c: In function ‘nextList’:
list.c:52:6: error: ‘L’ undeclared (first use in this function)
   52 |   if(L->current < L->size - 1) {
      |      ^
list.c:52:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘first’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c425500
Sat 30 Mar 2024 09:25:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘create_list’:
list.c:35:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   35 |   L->size = 0;
      |    ^~
list.c: In function ‘first’:
list.c:43:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   43 |   if(L->size == 0) {
      |       ^~
list.c:47:11: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   47 |   return L->data[L->current];
      |           ^~
list.c: In function ‘nextList’:
list.c:52:6: error: ‘L’ undeclared (first use in this function)
   52 |   if(L->current < L->size - 1) {
      |      ^
list.c:52:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘first’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
dca90ef
